# faf-eco

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
faf/: __init__.py  build_selector1.py  entities_T1.py  entities_T2.py  entities_T3.py  entities_base.py  entities_basic.py  entities_endgame.py  entities_experimental.py  entity_register.py  game_init.py  game_step.py  utils.py
faf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
faf/demo/: __init__.py
models/: example_run1.py
models/faf/: __init__.py  entities_1.py  entities_base.py  utils.py
notebooks/: FAF_ECO_Sim_01.ipynb
test/: test_basic.py  test_buildselector1.py
