[metatata]
description = Toolset to develop FAF builds
long-description = file: README.md
keywords = gaming, toolset
license = MIT
classifiers =
    Programming Language :: Python :: 3.11
url = https://rey.wiki
author = George Rey

[options]
packages =
    faf
python_requires = >=3.11

install_requires =
# =============== system
    # notebookinit @ git+https://github.com/jerzydziewierz/notebookinit.git#egg=notebookinit

[options.entry_points]
console_scripts =
    fafdemo = faf.demo:main

